// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component renders correctly 1`] = `
Object {
  "component": <BrowserRouter
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Provider
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <Home>
          <section
            className="home has-text-centered page-height pl-15 pr-15"
          >
            <section
              className="fill-page"
            >
              <section
                className="container full-height is-flex"
              >
                <article
                  className="auto"
                >
                  <span
                    className="sp sp-map has-text-white"
                  />
                  <h1
                    className="mt-40 pl-20 pr-20 is-size-5"
                  >
                    SITES_HEADER
                  </h1>
                </article>
              </section>
            </section>
            <div
              className="search"
            >
              <p
                className="mb-5 mt-10 has-text-white has-text-centered"
              />
              <TextInput
                icon="sp-location"
                loading={false}
                onChange={[Function]}
                value=""
              >
                <div
                  className="control"
                >
                  <input
                    className="input"
                    icon="sp-location"
                    loading={false}
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <i
                    className="sp has-text-grey-lighter sp-location"
                  />
                </div>
              </TextInput>
            </div>
            <article
              className="mt-15"
            >
              <p>
                CS_NOT_FOUND
              </p>
              <Link
                className="has-text-weight-bold is-uppercase is-size-6"
                onClick={[Function]}
                to="/create-site"
              >
                <LinkAnchor
                  className="has-text-weight-bold is-uppercase is-size-6"
                  href="/create-site"
                  navigate={[Function]}
                  onClick={[Function]}
                >
                  <a
                    className="has-text-weight-bold is-uppercase is-size-6"
                    href="/create-site"
                    onClick={[Function]}
                  >
                    <small>
                      CREATE_SITE
                    </small>
                  </a>
                </LinkAnchor>
              </Link>
            </article>
          </section>
        </Home>
      </Provider>
    </Router>
  </BrowserRouter>,
  "store": Object {
    "clearActions": [Function],
    "dispatch": [Function],
    "getActions": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`Home component renders correctly when there are sites available 1`] = `
Object {
  "component": <BrowserRouter
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Provider
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <Home>
          <section
            className="home has-text-centered page-height pl-15 pr-15"
          >
            <section
              className="fill-page"
            >
              <section
                className="container full-height is-flex"
              >
                <article
                  className="auto"
                >
                  <span
                    className="sp sp-map has-text-white"
                  />
                  <h1
                    className="mt-40 pl-20 pr-20 is-size-5"
                  >
                    SITES_HEADER
                  </h1>
                </article>
              </section>
            </section>
            <div
              className="search"
            >
              <p
                className="mb-5 mt-10 has-text-white has-text-centered"
              />
              <TextInput
                icon="sp-location"
                loading={false}
                onChange={[Function]}
                value=""
              >
                <div
                  className="control"
                >
                  <input
                    className="input"
                    icon="sp-location"
                    loading={false}
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <i
                    className="sp has-text-grey-lighter sp-location"
                  />
                </div>
              </TextInput>
            </div>
            <article
              className="mt-15"
            >
              <p>
                CS_NOT_FOUND
              </p>
              <Link
                className="has-text-weight-bold is-uppercase is-size-6"
                onClick={[Function]}
                to="/create-site"
              >
                <LinkAnchor
                  className="has-text-weight-bold is-uppercase is-size-6"
                  href="/create-site"
                  navigate={[Function]}
                  onClick={[Function]}
                >
                  <a
                    className="has-text-weight-bold is-uppercase is-size-6"
                    href="/create-site"
                    onClick={[Function]}
                  >
                    <small>
                      CREATE_SITE
                    </small>
                  </a>
                </LinkAnchor>
              </Link>
            </article>
          </section>
        </Home>
      </Provider>
    </Router>
  </BrowserRouter>,
  "store": Object {
    "clearActions": [Function],
    "dispatch": [Function],
    "getActions": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`Home component renders messages 1`] = `
Object {
  "component": <BrowserRouter
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Provider
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <Home>
          <section
            className="home has-text-centered page-height pl-15 pr-15"
          >
            <section
              className="fill-page"
            >
              <p
                className="message"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div style='color:blue;'><h1>Some Title Content</h1><p>Some explanation for something we need to tell the installer goes here.</p></div>",
                  }
                }
                key="0"
              />
              <section
                className="container full-height is-flex"
              >
                <article
                  className="auto"
                >
                  <span
                    className="sp sp-map has-text-white"
                  />
                  <h1
                    className="mt-40 pl-20 pr-20 is-size-5"
                  >
                    SITES_HEADER
                  </h1>
                </article>
              </section>
            </section>
            <div
              className="search"
            >
              <p
                className="mb-5 mt-10 has-text-white has-text-centered"
              />
              <TextInput
                icon="sp-location"
                loading={false}
                onChange={[Function]}
                value=""
              >
                <div
                  className="control"
                >
                  <input
                    className="input"
                    icon="sp-location"
                    loading={false}
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <i
                    className="sp has-text-grey-lighter sp-location"
                  />
                </div>
              </TextInput>
            </div>
            <article
              className="mt-15"
            >
              <p>
                CS_NOT_FOUND
              </p>
              <Link
                className="has-text-weight-bold is-uppercase is-size-6"
                onClick={[Function]}
                to="/create-site"
              >
                <LinkAnchor
                  className="has-text-weight-bold is-uppercase is-size-6"
                  href="/create-site"
                  navigate={[Function]}
                  onClick={[Function]}
                >
                  <a
                    className="has-text-weight-bold is-uppercase is-size-6"
                    href="/create-site"
                    onClick={[Function]}
                  >
                    <small>
                      CREATE_SITE
                    </small>
                  </a>
                </LinkAnchor>
              </Link>
            </article>
          </section>
        </Home>
      </Provider>
    </Router>
  </BrowserRouter>,
  "store": Object {
    "clearActions": [Function],
    "dispatch": [Function],
    "getActions": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
}
`;
